--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,16 @@
-# Compiled class file
-*.class
+# Ignore system files
+.DS_Store
+Thumbs.db
 
-# Log file
+# Ignore node modules folder (if you use Node.js)
+node_modules/
+
+# Ignore log files
 *.log
 
-# BlueJ files
-*.ctxt
+# Ignore environment variables files
+.env
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# Ignore build/dist folders if any
+dist/
+build/
